--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -151,7 +151,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                                 <i class="fa fa-building-o fa-fw"></i><span class="title">Compras</span> <span class="expand-sign">+</span>
                             </a>
                             <ul>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/estadocompra">Estado Compra</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/estadopedido">Estado Pedido</a></li>
                                 <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedidocompra">Pedido</a></li>
                             </ul>
                         </li>
@@ -243,10 +243,10 @@ if (defined('RUNNING_FROM_ROOT')) {
             <!-- BEGIN CONTENT-->
             <div id="content">
                 <section>
-<!--                            <ol class="breadcrumb">
-                                <li><a href="http://localhost/CodeCovers/www.codecovers.com/boostbox">home</a></li>
-                                <li class="active">Form layouts</li>
-                        </ol>-->
+                        <ol class="breadcrumb">
+                            <li><a href="http://localhost/CodeCovers/www.codecovers.com/boostbox">home</a></li>
+                            <li class="active">Formulario</li>
+                        </ol>
                         <div class="section-header">
                             <h3 class="text-standard"><i class="fa fa-fw fa-arrow-circle-right text-gray-light"></i> Evo <small></small></h3>
                         </div>
