se ajusta la busqueda de producto

--- a/module/Admin/view/admin/saldo-inventario/index.phtml
+++ b/module/Admin/view/admin/saldo-inventario/index.phtml
@@ -22,7 +22,7 @@ if ($this->msg != null)
                         </div>
                         <div class="col-lg-4 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idProducto'));?> 
-                            
+                             <?php echo $this->formElement($form->get('nombreProducto'));?> 
                         </div>
                         <div class="col-lg-1">
                              <?php echo $this->formElement($form->get('btnBuscarProducto'));?> 
