--- a/module/Admin/view/admin/saldo-inventario/index.phtml
+++ b/module/Admin/view/admin/saldo-inventario/index.phtml
@@ -33,7 +33,8 @@ if ($this->msg != null)
                             <label for="email1" class="control-label">Proveedor</label>
                         </div>
                         <div class="col-lg-4 col-md-11 col-sm-9">
-                             <?php echo $this->formElement($form->get('idProveedor'));?>                            
+                             <?php echo $this->formElement($form->get('idProveedor'));?>
+                             <?php echo $this->formElement($form->get('nombreProveedor'));?> 
                         </div>
                         <div class="col-lg-1 col-md-2 col-sm-3">
                              <?php echo $this->formElement($form->get('btnBuscarProveedor'));?> 
