--- a/module/Admin/view/admin/dato-basico-tercero/buscar.phtml
+++ b/module/Admin/view/admin/dato-basico-tercero/buscar.phtml
@@ -1,40 +1,67 @@
 <script type="text/javascript">
-    $(document).ready(function() {
-        $('#dtbuscarTercero').DataTable();   
+    $(document).ready(function () {
+        $('#dtbuscarTercero').DataTable();
     });
 </script>
-<div class="row">
-    <div class="col-lg-12"> 
-            <div class="row">  
-                <div class="col-lg-12">
-                    <div class="box box-bordered">
-                        <div class="box-head">
-                            <header><h4 class="text-light"><strong>Dato Basico Terceros</strong></h4></header>
-                            <a class="btn btn-equal btn-sm btn-close" id="btnClosePop" style="float: right" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></a>
-                        </div>
-                        <div class="box"> 
-                            <div class="box-body table-responsive">
-                                <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                    <table id="dtbuscarTercero" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
-                                        <thead>
-                                            <tr role="row">
-                                                <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Nif</th>
-                                                <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Descripción</th>
-                                                <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Nombre</th>
-                                                <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Nombre</th>
-                                                <th lass="sorting" role="columnheader" tabindex="5" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Apellido</th>
-                                                <th lass="sorting" role="columnheader" tabindex="6" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Apellido</th>
-                                                <th lass="sorting" role="columnheader" tabindex="7" aria-controls="dtcrudindex" rowspan="1" colspan="1">Dirección</th>
-                                                <th lass="sorting" role="columnheader" tabindex="8" aria-controls="dtcrudindex" rowspan="1" colspan="1">Teléfono</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <?php
-                                            foreach ($this->registros as $obj) {
-                                                echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#idDatoBasicoTercero').val(".$obj['idDatoBasicoTercero'].");$('#btnClosePop').click();$('#modal-dialog-display').html('')\")\">
-                                                    <td>". $obj['descripcionTipoDocumento'] ."</td>
+<div class="row">  
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close" id="btnClosePop" data-dismiss="modal" aria-hidden="true">×</button>
+            <h4 class="modal-title" id="textModalLabel"><h4 class="text-light">Búsqueda de <strong>Tercero</strong></h4></h4>
+        </div>
+        <div class="box-body">
+            <?php echo $this->form()->openTag($form); ?>
+            <div class="form-group">
+                <div class="col-lg-1 col-md-2 col-sm-3">
+                    <label for="email1" class="control-label">Nit</label>
+                </div>
+                <div class="col-lg-3 col-md-11 col-sm-9">
+                    <?php echo $this->formElement($form->get('nit')); ?>                            
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-lg-1 col-md-2 col-sm-3">
+                    <label for="email1" class="control-label">Descripción</label>
+                </div>
+                <div class="col-lg-3 col-md-11 col-sm-9">
+                    <?php echo $this->formElement($form->get('descripcion')); ?>                            
+                </div>
+            </div>
+
+            <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
+                <input name="btnBuscar" id="btnBuscar" type="button" title="Buscar" style="margin:2px" class="btn btn-success" value="Buscar" 
+                       onclick="usar_ajax('<?php echo $this->basePath() ?>/admin/datobasicotercero/buscar?campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>', '#modal-dialog-display', 'nit=' + $('#nit').val() + '&amp;descripcion=' + $('#descripcion').val());">
+                       <?php
+                       echo $this->formElement($form->get('btnCancelar'));
+                       ?>
+            </div>
+            <?php echo $this->form()->closeTag(); ?>
+        </div>
+
+        <div class="box "> 
+            <div class="box-body table-responsive">
+                <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
+                    <table id="dtbuscarTercero" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
+                        <thead>
+                            <tr role="row">
+                                <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
+                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Nif</th>
+                                <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Descripción</th>
+                                <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Nombre</th>
+                                <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Nombre</th>
+                                <th lass="sorting" role="columnheader" tabindex="5" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Apellido</th>
+                                <th lass="sorting" role="columnheader" tabindex="6" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Apellido</th>
+                                <th lass="sorting" role="columnheader" tabindex="7" aria-controls="dtcrudindex" rowspan="1" colspan="1">Dirección</th>
+                                <th lass="sorting" role="columnheader" tabindex="8" aria-controls="dtcrudindex" rowspan="1" colspan="1">Teléfono</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <?php
+                            foreach ($this->registros as $obj) {
+                                echo "
+                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#".$this->campoId."').val(".$obj['idDatoBasicoTercero'].");$('#".$this->campoNombre."').val('".$obj["descripcion"]."');$('#btnClosePop').click();$('#modal-dialog-display').html('')\")\">
+                                                    <td>" . $obj['descripcionTipoDocumento'] . "</td>
                                                     <td>" . $obj['nit'] . "</td>
                                                     <td>" . $obj['descripcion'] . "</td>
                                                     <td>" . $obj['primerNombre'] . "</td>
@@ -44,15 +71,12 @@
                                                     <td>" . $obj['direccion'] . "</td>
                                                     <td>" . $obj['telefono'] . "</td>
                                                 </tr>";
-                                            }
-                                            ?>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                            }
+                            ?>
+                        </tbody>
+                    </table>
                 </div>
             </div>
+        </div>
     </div>
 </div>
