--- a/module/Admin/view/admin/usuario/index.phtml
+++ b/module/Admin/view/admin/usuario/index.phtml
@@ -1,10 +1,9 @@
 <?php
-$form=$this->form;
+$form = $this->form;
 $form->prepare();
 //<====Si se envía un mensaje este se muestra=====> 
-if ($this->msg != null) 
-{
-    echo "<script type='text/javascript'>".$this->msg."</script>";    
+if ($this->msg != null) {
+    echo "<script type='text/javascript'>" . $this->msg . "</script>";
 }
 ?>
 <div class="row">
@@ -15,92 +14,93 @@ if ($this->msg != null)
             </div>
             <div class="box-body">
                 <?php echo $this->form()->openTag($form); ?>
-                    <?php echo $this->formInput($form->get('idUsuario'));?>
-                 <div class="form-group">
-                        <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Tipo Usuario</label>
-                        </div>
-                        <div class="col-lg-3 col-md-11 col-sm-9">
-                             <?php echo $this->formElement($form->get('idTipoUsuario'));?>                          
-                        </div>
-                    </div>
-                
-                    <div class="form-group">
-                        <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Tercero </label>
-                        </div>
-                        <div class="col-lg-4 col-md-11 col-sm-9">
-                             <?php echo $this->formElement($form->get('idDatoBasicoTercero'));?>                            
-                        </div>
-                        <div class="col-lg-1">
-                             <?php echo $this->formElement($form->get('btnBuscarTercero'));?>                            
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Email</label>
-                        </div>
-                        <div class="col-lg-3 col-md-11 col-sm-9">
-                            <?php echo $this->formInput($form->get('email'));?>                            
-                        </div>
-                    </div>
+                <?php echo $this->formInput($form->get('idUsuario')); ?>
                 <div class="form-group">
-                        <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">clave</label>
-                        </div>
-                        <div class="col-lg-3 col-md-11 col-sm-9">
-                            <?php echo $this->formInput($form->get('clave'));?>                            
-                        </div>
+                    <div class="col-lg-1 col-md-2 col-sm-3">
+                        <label for="email1" class="control-label">Tipo Usuario</label>
                     </div>
-                    <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
-                        <?php   
-                            echo $this->formElement($form->get('btnGuardar'));
-                            echo $this->formElement($form->get('btnModificar'));
-                            echo $this->formElement($form->get('btnEliminar'));
-                            echo $this->formElement($form->get('btnCancelar'));
-                        ?>
+                    <div class="col-lg-3 col-md-11 col-sm-9">
+                        <?php echo $this->formElement($form->get('idTipoUsuario')); ?>                          
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-1 col-md-2 col-sm-3">
+                        <label for="email1" class="control-label">Tercero </label>
+                    </div>
+                    <div class="col-lg-4 col-md-11 col-sm-9">
+                        <?php echo $this->formElement($form->get('idDatoBasicoTercero')); ?>
+                        <?php echo $this->formElement($form->get('nombreTercero')); ?>
+
+                    </div>
+                    <div class="col-lg-1">
+                        <?php echo $this->formElement($form->get('btnBuscarTercero')); ?>                            
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-1 col-md-2 col-sm-3">
+                        <label for="email1" class="control-label">Email</label>
+                    </div>
+                    <div class="col-lg-3 col-md-11 col-sm-9">
+                        <?php echo $this->formInput($form->get('email')); ?>                            
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-1 col-md-2 col-sm-3">
+                        <label for="email1" class="control-label">clave</label>
+                    </div>
+                    <div class="col-lg-3 col-md-11 col-sm-9">
+                        <?php echo $this->formInput($form->get('clave')); ?>                            
+                    </div>
+                </div>
+                <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
+                    <?php
+                    echo $this->formElement($form->get('btnGuardar'));
+                    echo $this->formElement($form->get('btnModificar'));
+                    echo $this->formElement($form->get('btnEliminar'));
+                    echo $this->formElement($form->get('btnCancelar'));
+                    ?>
+                </div>
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
-        <?php if (count($this->registros)>0) { ?>       
-        <div class="row">  
-            <div class="col-lg-12">
-                <div class="box box-bordered">
-                    <div class="box-head">
-                        <header><h4 class="text-light"><strong>Usuarios</strong> <small>Todas</small></h4></header>
-                    </div>
-                    <div class="box"> 
-                        <div class="box-body table-responsive">
-                            <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
-                                    <thead>
-                                        <tr role="row">
-                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
-                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tercero</th>
-                                            <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Email</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                         <?php 
-                                        foreach ($this->registros as $obj) {
-                                            echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/usuario/index?id=".$obj['idUsuario']."')\">
-                                                    <td>". $obj['descripcionTipoUsuario'] ."</td>
-                                                    <td>". $obj['descripcionTercero'] ."</td>
-                                                    <td>".$obj['email']."</td>
+        <?php if (count($this->registros) > 0) { ?>       
+            <div class="row">  
+                <div class="col-lg-12">
+                    <div class="box box-bordered">
+                        <div class="box-head">
+                            <header><h4 class="text-light"><strong>Usuarios</strong> <small>Todas</small></h4></header>
+                        </div>
+                        <div class="box"> 
+                            <div class="box-body table-responsive">
+                                <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
+                                    <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
+                                        <thead>
+                                            <tr role="row">
+                                                <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
+                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tercero</th>
+                                                <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Email</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <?php
+                                            foreach ($this->registros as $obj) {
+                                                echo "
+                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '" . $this->basePath() . "/admin/usuario/index?id=" . $obj['idUsuario'] . "')\">
+                                                    <td>" . $obj['descripcionTipoUsuario'] . "</td>
+                                                    <td>" . $obj['descripcionTercero'] . "</td>
+                                                    <td>" . $obj['email'] . "</td>
                                                 </tr>";
-                                        }
-                                        ?>
-                                    </tbody>
-                                </table>
-                             </div>
+                                            }
+                                            ?>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         <?php } ?>
     </div>
 </div>
- 
