--- a/module/Admin/view/admin/proveedor/buscar.phtml
+++ b/module/Admin/view/admin/proveedor/buscar.phtml
@@ -42,7 +42,7 @@
         <div class="box "> 
             <div class="box-body table-responsive">
                 <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                    <table id="dtbuscarProducto" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
+                    <table id="dtbuscarProveedor" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
                         <thead>
                             <tr role="row">
                                 <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tercero</th>
