--- a/module/Admin/view/admin/pedido-compra/index.phtml
+++ b/module/Admin/view/admin/pedido-compra/index.phtml
@@ -13,14 +13,15 @@ if ($this->msg != null)
     function AddRow()
     {
         numRows++;
-        var onClick="onclick=\"usar_ajax('/evo-master/admin/producto/buscar?campoId=idProducto"+numRows+"&campoNombre=nombreProducto"+numRows+"','#modal-dialog-display','')\"";
-        var cadena ="<tr>";
+        var onClick="onclick=\"usar_ajax('<?php echo $this->basePath()?>/admin/producto/buscar?campoId=idProducto"+numRows+"&campoNombre=nombreProducto"+numRows+"','#modal-dialog-display','')\"";
+        var cadena ="<tr id='pedidoCompraPosicion"+numRows+"'>";
         cadena += "<td>"+numRows+"</td>";
         cadena += " <td><div class='col-lg-5 col-md-4 col-sm-4'>";
-        cadena += "<input class='form-control' id='idProducto"+numRows+"' type='hidden'>";
+        cadena += "<input class='form-control' id='idProducto"+numRows+"' name='idProducto"+numRows+"' type='hidden'>";
         cadena += "<input class='form-control' id='nombreProducto"+numRows+"' type='text' readonly='true'></div>";
         cadena += "<input type='button' "+onClick+" data-target='#textModal' data-toggle='modal' style='margin:2px' class='btn btn-support2' value='Buscar'></td>";
-        cadena += "<td><input name=\"cantidad"+numRows+"\" id=\"cantidad"+numRows+"\" type='text' placeholder='cantidad' maxlength='9' class='form-control' onkeypress=\"return validarTecla(event,'num')\"></td></tr>;"
+        cadena += "<td><input name=\"cantidad"+numRows+"\" id=\"cantidad"+numRows+"\" type='text' required='required' placeholder='cantidad' maxlength='9' class='form-control' onkeypress=\"return validarTecla(event,'num')\"></td>";
+        cadena += "<td><a class='btn btn-danger' onclick=\"$('#pedidoCompraPosicion"+numRows+"').remove()\"><i class='fa  fa-minus-square'></i></a></td></tr>";
         $('#tBodyPedido').append(cadena);
     }
      $(document).ready(function() {
@@ -74,7 +75,7 @@ if ($this->msg != null)
                             <label for="email1" class="control-label">Proveedor</label>
                         </div>
                         <div class="col-lg-3 col-md-4 col-sm-5">
-                            <?php echo $this->formInput($form->get('descripcionProveedor'));?>  
+                            <?php echo $this->formInput($form->get('nombreProveedor'));?>  
                             
                         </div>
                         <?php echo $this->formElement($form->get('btnBuscarProveedor'));?>  
@@ -118,25 +119,11 @@ if ($this->msg != null)
                                                         <th>#</th>
                                                         <th>Producto</th>
                                                         <th>Cantidad</th>
-
+                                                        <th></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody id="tBodyPedido">
-                                                    <!--
-                                                    <tr>
-                                                        <td>1</td>
-                                                        <td>
-                                                            <div class="col-lg-5 col-md-4 col-sm-4">
-                                                                <input class="form-control" id="idProducto1" type="hidden" readonly="true">
-                                                                <input class="form-control" id="nombreProducto1" type="text" readonly="true">
-                                                            </div>
-                                                            <input type="button" data-target="#textModal" 
-                                                                   data-toggle="modal" style="margin:2px" class="btn btn-support2" 
-                                                                   value="Buscar" 
-                                                                   onclick="usar_ajax('/evo-master/admin/producto/buscar?campoId=idProducto1&campoNombre=nombreProducto1','#modal-dialog-display','')">
-                                                        </td>
-                                                        <td><?php echo $this->formInput($form->get('cantidad'));?> </td>
-                                                    </tr>-->
+                                                    <!--  -->
                                                 </tbody>
                                             </table>
                                     </div>
@@ -145,8 +132,8 @@ if ($this->msg != null)
                         </div><!--end .col-lg-6 -->
                     </div>
                     <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <button type="reset" class="btn btn-default">Reset</button>
+                        <?php echo $this->formElement($form->get('btnGuardar'));?>  
+                        <?php echo $this->formElement($form->get('btnCancelar'));?> 
                     </div>
                 <?php echo $this->form()->closeTag(); ?>
             </div>
