--- a/module/Admin/view/admin/pedido-compra/index.phtml
+++ b/module/Admin/view/admin/pedido-compra/index.phtml
@@ -56,10 +56,11 @@ if ($this->msg != null)
                 <div class="tools">
                     <div class="btn-group btn-group-transparent">
                         <a class="btn btn-equal btn-sm "><i class="fa  fa-search"></i></a>
-                        <a class="btn btn-equal btn-sm btn-collapse"><i class="fa fa-angle-down"></i></a>
+                        <!--<a class="btn btn-equal btn-sm btn-collapse"><i class="fa fa-angle-down"></i></a>-->
                     </div>
                 </div>
             </div>
+            <!--
             <div class="box-body style-white" style="display: none;">
                 <div class="col-md-1">
                     <a href="#" class="btn btn-default  btn-labeled">
@@ -67,6 +68,7 @@ if ($this->msg != null)
                     </a>
                 </div>
             </div>
+            -->
         </div>
     </div>
     <div class="col-lg-12">
