--- a/module/Admin/view/admin/pedido-compra/index.phtml
+++ b/module/Admin/view/admin/pedido-compra/index.phtml
@@ -55,7 +55,7 @@ if ($this->msg != null)
                 </header>
                 <div class="tools">
                     <div class="btn-group btn-group-transparent">
-                        <a class="btn btn-equal btn-sm "><i class="fa  fa-search"></i></a>
+                        <a class="btn btn-equal btn-sm " data-target="#textModal" data-toggle="modal" onclick="usar_ajax('<?php echo $this->basePath()?>/admin/pedidocompra/buscar','#modal-dialog-display','')"><i class="fa  fa-search"></i></a>
                         <!--<a class="btn btn-equal btn-sm btn-collapse"><i class="fa fa-angle-down"></i></a>-->
                     </div>
                 </div>
