--- a/module/Admin/view/admin/pedido-compra/buscar.phtml
+++ b/module/Admin/view/admin/pedido-compra/buscar.phtml
@@ -70,6 +70,7 @@
                             foreach ($this->registros as $obj) {
                                 echo "
                                     <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#".$this->campoId."').val(".$obj['idPedidoCompra'].");$('#".$this->campoNombre."').val('".$obj['numeroPedido']."');$('#btnClosePop').click();$('#modal-dialog-display').html('')\")\">
+                                        <!--<tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href','".$this->basePath()."/admin/pedidocompra/index?idPedidoCompra=".$obj['idPedidoCompra']."')\">-->
                                         <td>".$obj['numeroPedido']."</td>
                                         <td>".$obj['nombreProveedor']."</td>
                                         <td>".$obj['pedidoDetalle']."</td>
