--- a/module/Admin/view/admin/pedido-compra/index.phtml
+++ b/module/Admin/view/admin/pedido-compra/index.phtml
@@ -12,16 +12,16 @@ if ($this->msg != null)
 
     function AddRow()
     {
-        //$("#btnGuardar").attr('type','button');
         numRows++;
         var onClick="onclick=\"usar_ajax('<?php echo $this->basePath()?>/admin/producto/buscar?campoId=idProducto"+numRows+"&campoNombre=nombreProducto"+numRows+"','#modal-dialog-display','')\"";
         var cadena ="<tr id='pedidoCompraPosicion"+numRows+"'>";
         cadena += "<td>"+numRows+"</td>";
-        cadena += " <td><div class='col-lg-5 col-md-4 col-sm-4'>";
+        cadena += " <td><div class='col-lg-8 col-md-4 col-sm-4'>";
         cadena += "<input class='form-control' id='idProducto"+numRows+"' name='idProducto"+numRows+"' type='hidden'>";
         cadena += "<input class='form-control' id='nombreProducto"+numRows+"' type='text' required='required' onkeypress='return false'></div>";
         cadena += "<input type='button' "+onClick+" data-target='#textModal' data-toggle='modal' style='margin:2px' class='btn btn-support2' value='Buscar'></td>";
         cadena += "<td><input name=\"cantidad"+numRows+"\" id=\"cantidad"+numRows+"\" type='text' required='required' placeholder='cantidad' maxlength='9' class='form-control' onkeypress=\"return validarTecla(event,'num')\"></td>";
+        cadena += "<td><input name=\"valorCompra"+numRows+"\" id=\"valorCompra"+numRows+"\" type='text' required='required' placeholder='Valor Compra' maxlength='9' class='form-control' onkeypress=\"return validarTecla(event,'num')\"></td>";
         cadena += "<td><a class='btn btn-danger' onclick=\"$('#pedidoCompraPosicion"+numRows+"').remove()\"><i class='fa  fa-minus-square'></i></a></td></tr>";
         $('#tBodyPedido').append(cadena);
     }
@@ -135,6 +135,7 @@ if ($this->msg != null)
                                                         <th>#</th>
                                                         <th>Producto</th>
                                                         <th>Cantidad</th>
+                                                        <th>Valor Compra</th>
                                                         <th></th>
                                                     </tr>
                                                 </thead>
