--- a/module/Admin/view/admin/pedido-compra/buscar.phtml
+++ b/module/Admin/view/admin/pedido-compra/buscar.phtml
@@ -1,8 +1,14 @@
 <script type="text/javascript">
     $(document).ready(function() {
+         $('#numeroPedido').attr('readonly','');
         $('#dtbuscarPedidoCompra').DataTable();
-        $('#numeroPedido').attr('readonly','');
+       
+        
     });
+    function btnBuscar_onclick()
+    {
+        usar_ajax("<?php echo $this->basePath()?>/admin/pedidocompra/buscar?campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>",'#modal-dialog-display',"'numeroPedido="+$('#numeroPedido').val()+"&idEstadoPedido="+$('#idEstadoPedidoBusqueda').val()+"'");
+    }
 </script>
   
 <div class="row">  
@@ -39,13 +45,13 @@
                     <label for="select1" class="control-label">Estado Pedido</label>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-4">
-                    <?php echo $this->formElement($form->get('idEstadoPedido'));?>  
+                    <?php echo $this->formElement($form->get('idEstadoPedidoBusqueda'));?>  
 
                 </div>
             </div>
             <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
                 <input name="btnBuscar" id="btnBuscar" type="button" title="Buscar" style="margin:2px" class="btn btn-success" value="Buscar" 
-                       onclick="usar_ajax('<?php echo $this->basePath()?>/admin/pedidocompra/buscar?campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>','#modal-dialog-display','numeroPedido='+$('#numeroPedido').val()+'&idEstadoPedido='+$('#idEstadoPedido').val()+'&amp;idProveedor='+$('#idProveedor').val());">
+                       onclick="btnBuscar_onclick()">
                 <?php
                     echo $this->formElement($form->get('btnCancelar'));
                 ?>
