--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -152,7 +152,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                             </a>
                             <ul>
                                 <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/estadopedido">Estado Pedido</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedidocompra">Pedido</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedidocompra/solicitud">Solicitud Pedído</a></li>
                             </ul>
                         </li>
                         <li>
