--- a/module/Admin/view/admin/pedido-compra/solicitud.phtml
+++ b/module/Admin/view/admin/pedido-compra/solicitud.phtml
@@ -53,12 +53,13 @@ if ($this->msg != null)
                     </h4>
                     
                 </header>
+                <!--
                 <div class="tools">
                     <div class="btn-group btn-group-transparent">
                         <a class="btn btn-equal btn-sm " data-target="#textModal" data-toggle="modal" onclick="usar_ajax('<?php echo $this->basePath()?>/admin/pedidocompra/buscar','#modal-dialog-display','')"><i class="fa  fa-search"></i></a>
-                        <!--<a class="btn btn-equal btn-sm btn-collapse"><i class="fa fa-angle-down"></i></a>-->
+                        <!--<a class="btn btn-equal btn-sm btn-collapse"><i class="fa fa-angle-down"></i></a>
                     </div>
-                </div>
+                </div>-->
             </div>
             <!--
             <div class="box-body style-white" style="display: none;">
