--- a/module/Admin/view/admin/pedido-compra/buscar.phtml
+++ b/module/Admin/view/admin/pedido-compra/buscar.phtml
@@ -5,7 +5,7 @@
     });
     function btnBuscar_onclick()
     {
-        usar_ajax("<?php echo $this->basePath()?>/admin/pedidocompra/buscar?vista=<?php echo $this->vista ?>&campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>",'#modal-dialog-display',"'numeroPedido="+$('#numeroPedido').val()+"&idEstadoPedido="+$('#idEstadoPedidoBusqueda').val()+"'");
+        usar_ajax("<?php echo $this->basePath()?>/admin/pedidocompra/buscar?vista=<?php echo $this->vista ?>&campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>",'#modal-dialog-display',"numeroPedido="+$('#numeroPedido').val()+"&idEstadoPedido="+$('#idEstadoPedido').val());
     }
 </script>
   
@@ -43,7 +43,7 @@
                     <label for="select1" class="control-label">Estado Pedido</label>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-4">
-                    <?php echo $this->formElement($form->get('idEstadoPedidoBusqueda'));?>  
+                    <?php echo $this->formElement($form->get('idEstadoPedido'));?>  
 
                 </div>
             </div>
