--- a/module/Admin/view/admin/pedido-compra/solicitud.phtml
+++ b/module/Admin/view/admin/pedido-compra/solicitud.phtml
@@ -49,7 +49,7 @@ if ($this->msg != null)
             <div class="box-head">
                 <header>
                     <h4 class="text-light">
-                        <i class="fa fa-fw fa-laptop"></i>  <strong>Pedido Compra</strong>
+                        <i class="fa fa-fw fa-laptop"></i> Solicitud <strong>Pedido Compra</strong>
                     </h4>
                     
                 </header>
@@ -97,16 +97,17 @@ if ($this->msg != null)
                         </div>
                         <?php echo $this->formElement($form->get('btnBuscarProveedor'));?>  
                     </div>
+                    <!--
                      <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Documento Pago</label>
                         </div>
                         <div class="col-lg-3 col-md-4 col-sm-5">
-                             <?php echo $this->formElement($form->get('file-documentoPago'));?>   
+                               
                             <p class="help-block">Escanee el documento de pago.</p>
                         </div>
-                         
                     </div>
+                    -->
                     <div class="row">
         
                         <div class="col-lg-12">
