--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -155,6 +155,17 @@ if (defined('RUNNING_FROM_ROOT')) {
                                 <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedidocompra/solicitud">Solicitud Pedído</a></li>
                             </ul>
                         </li>
+                        
+                        <li>
+                            <a href="javascript:void(0);">
+                                <i class="fa fa-building-o fa-fw"></i><span class="title">Ventas</span> <span class="expand-sign">+</span>
+                            </a>
+                            <ul>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/estadopedidoventa">Estado Pedido Venta</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedidoventa/solicitud">Solicitud Pedido</a></li>
+                            </ul>
+                        </li>
+                        
                         <li>
                             <a href="javascript:void(0);">
                                 <i class="fa fa-building-o fa-fw"></i><span class="title">División Territorial</span> <span class="expand-sign">+</span>
