--- a/module/Admin/view/admin/pedido-compra/autorizar.phtml
+++ b/module/Admin/view/admin/pedido-compra/autorizar.phtml
@@ -12,11 +12,10 @@ if ($this->msg != null)
 {
     echo "<script type='text/javascript'>".$this->msg."</script>";    
 }
+if ($this->validacion != null) {
+    echo "<script type='text/javascript'>showMessageWarning('Validación','".$this->validacion."');</script>";  
+}
 ?>
-<script type="text/javascript">
-    $(document).ready(function() {
-    });
-</script>
  
 <div class="row">
     <div class="col-lg-12">
