Tarea #20, adicional a eso se crea formulario de cliente

--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -283,6 +283,10 @@ if (defined('RUNNING_FROM_ROOT')) {
             <div class="modal-dialog" id="modal-dialog-display">
                 
             </div><!-- /.modal-dialog -->
+            <!--Se usa para los dialog que proviene de otro dialog-->
+            <div class="modal-dialog" id="modal-dialog-display2">
+                
+            </div>
         </div>
     </body>
 </html>
