--- a/module/Admin/view/admin/pedido-venta/solicitud.phtml
+++ b/module/Admin/view/admin/pedido-venta/solicitud.phtml
@@ -12,26 +12,55 @@ if ($this->msg != null) {
     function AddRow()
     {
         numRows++;
-        var parametrosGet = "?campoId=idSaldoInventario" + numRows + "&campoNombre=nombreProducto" + numRows + "&campoIdProducto=idProducto" + numRows;
+        var parametrosGet = "?campoId=idSaldoInventario" + numRows + "&campoNombre=nombreProducto" + numRows + "&campoIdProducto=hidIdProducto" + numRows;
         parametrosGet += "&campoValorVenta=hidValorVenta" + numRows + "&campoCantidad=hidCantidad" + numRows;
         var onClick = "onclick=\"usar_ajax('<?php echo $this->basePath() ?>/admin/saldoinventario/buscar" + parametrosGet + "','#modal-dialog-display','')\"";
         var cadena = "<tr id='pedidoVentaPosicion" + numRows + "'>";
         cadena += "<td>" + numRows + "</td>";
         cadena += "<td><div class='col-lg-8 col-md-4 col-sm-4'>";
         cadena += "<input class='form-control' id='idSaldoInventario" + numRows + "' name='idSaldoInventario" + numRows + "' type='hidden'>";
-        cadena += "<input class='form-control' id='idProducto" + numRows + "' name='idProducto" + numRows + "' type='hidden'>";
+        cadena += "<input class='form-control' id='hidIdProducto" + numRows + "' name='hidIdProducto" + numRows + "' type='hidden'>";
         cadena += "<input class='form-control' id='hidValorVenta" + numRows + "' name='hidValorVenta" + numRows + "' type='hidden'>";
         cadena += "<input class='form-control' id='hidCantidad" + numRows + "' name='hidCantidad" + numRows + "' type='hidden'>";
         cadena += "<input class='form-control' id='nombreProducto" + numRows + "' type='text' required='required' onkeypress='return false'></div>";
         cadena += "<input type='button' " + onClick + " data-target='#textModal' data-toggle='modal' style='margin:2px' class='btn btn-support2' value='Buscar'></td>";
         
-        cadena += "<td><input name=\"cantidad" + numRows + "\" id=\"cantidad" + numRows + "\" type='text' required='required' placeholder='Cantidad' maxlength='9' class='form-control' onkeypress=\"return validarTecla(event,'num')\"></td>";
+        cadena += "<td><input name=\"cantidad" + numRows + "\" id=\"cantidad" + numRows + "\" type='text' required='required' placeholder='Cantidad' maxlength='9' class='form-control' onkeyup=\"totalRow("+ numRows +")\" onkeypress=\"return validarTecla(event,'num')\"></td>";
         cadena += "<td><input name=\"valorVenta" + numRows + "\" id=\"valorVenta" + numRows + "\" type='text' required='required' placeholder='Valor Venta' maxlength='20' readonly class='form-control' onkeypress=\"return validarTecla(event,'num')\"></td>";
         cadena += "<td><a class='btn btn-danger' onclick=\"$('#pedidoVentaPosicion" + numRows + "').remove()\"><i class='fa  fa-minus-square'></i></a></td></tr>";
         $('#tBodyPedido').append(cadena);
     }
+    
+    function totalRow(numRows){
+        
+        var cantidad = $("#cantidad" + numRows).val();
+        var valorVenta = $("#hidValorVenta" + numRows).val()
+        var cantidadActual = $("#hidCantidad" + numRows).val();
+        var total = 0;
+        if(cantidad != "" && valorVenta != "" && cantidadActual != ""){
+            
+            cantidad = parseFloat(cantidad);
+            valorVenta = parseFloat(valorVenta);
+            cantidadActual = parseInt(cantidadActual);
+            
+            if(cantidad < 0){
+               cantidad =0;
+            }
+            if(cantidad > cantidadActual){
+                cantidad = cantidadActual;
+                $("#cantidad" + numRows).val(cantidad);
+            }
+            
+            if(cantidad > 0 && valorVenta > 0){
+                total = cantidad * valorVenta;
+            }
+        }
+        $("#valorVenta" + numRows).val(total);
+        
+    }
     $(document).ready(function () {
         AddRow();
+        
         // Valida que el formulario no tenga ningun detalle con productos repetidos
         $("#<?php echo $form->getName() ?>").submit(function (event) {
             var productos = []
