--- a/module/Admin/view/admin/saldo-inventario/buscar.phtml
+++ b/module/Admin/view/admin/saldo-inventario/buscar.phtml
@@ -39,7 +39,7 @@
 
             <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
                 <input name="btnBuscar" id="btnBuscar" type="button" title="Buscar" style="margin:2px" class="btn btn-success" value="Buscar" 
-                       onclick="usar_ajax('<?php echo $this->basePath() ?>/admin/saldoinventario/buscar?campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>&campoCantidad=<?php echo $this->campoCantidad ?>&campoValorVenta=<?php echo $this->campoValorVenta ?>  ', '#modal-dialog-display', 'idProducto=' + $('#idProducto').val() + '&amp;nombreProducto=' + $('#nombreProducto').val() + '&amp;idProveedor=' + $('#idProveedor').val() + '&amp;nombreProveedor=' + $('#nombreProveedor').val());
+                       onclick="usar_ajax('<?php echo $this->basePath() ?>/admin/saldoinventario/buscar?campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>&campoCantidad=<?php echo $this->campoCantidad ?>&campoValorVenta=<?php echo $this->campoValorVenta ?>&campoIdProducto=<?php echo $this->campoIdProducto ?>  ', '#modal-dialog-display', 'idProducto=' + $('#idProducto').val() + '&amp;nombreProducto=' + $('#nombreProducto').val() + '&amp;idProveedor=' + $('#idProveedor').val() + '&amp;nombreProveedor=' + $('#nombreProveedor').val());
                                ">
                        <?php
                        echo $this->formElement($form->get('btnCancelar'));
@@ -73,9 +73,9 @@
                                                     <td>" . $obj['descripcionMarca'] . "</td>
                                                     <td>" . $obj['descripcionCategoria'] . "</td>
                                                     <td>" . $obj['descripcionProveedor'] . "</td>
-                                                    <td>" . $obj['cantidad'] . "</td>
-                                                    <td>" . $obj['valorVenta'] . "</td>
-                                                    <td>" . $obj['valorCompra'] . "</td>
+                                                    <td>" . number_format($obj['cantidad']) . "</td>
+                                                    <td>$" . number_format($obj['valorVenta']) . "</td>
+                                                    <td>$" . number_format($obj['valorCompra']) . "</td>
                                                 </tr>";
                             }
                             ?>
