Se crea función para eliminar el contenido de los popup, cuando estos se cierren.

--- a/module/Admin/view/admin/categoria/buscar.phtml
+++ b/module/Admin/view/admin/categoria/buscar.phtml
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
         $('#dtbuscarCategoria').DataTable(); 
-        eventoLimpiarModal(true);
+        fnLimpiarModal("btnClosePop","modal-dialog-display","textModal");
     });
 </script>
 <div class="row">
