--- a/module/Admin/view/admin/pedido-compra/buscar.phtml
+++ b/module/Admin/view/admin/pedido-compra/buscar.phtml
@@ -2,7 +2,7 @@
     $(document).ready(function() {
         $('#numeroPedido').attr('readonly','');
         $('#dtbuscarPedidoCompra').DataTable();
-        eventoLimpiarModal(true);
+        fnLimpiarModal("btnClosePop","modal-dialog-display","textModal");
     });
     function btnBuscar_onclick()
     {
