--- a/module/Admin/view/admin/cliente/buscar.phtml
+++ b/module/Admin/view/admin/cliente/buscar.phtml
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $('#dtbuscarCliente').DataTable();
-        eventoLimpiarModal(true);
+        fnLimpiarModal("btnClosePop","modal-dialog-display","textModal");
     });
 </script>
 <div class="row">  
