--- a/module/Admin/view/admin/producto/buscar2.phtml
+++ b/module/Admin/view/admin/producto/buscar2.phtml
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
         $('#dtbuscarProducto').DataTable();
-        eventoLimpiarModal(false);
+        fnLimpiarModal("btnClosePop2","modal-dialog-display2","textModal2");
     });
 </script>
   
